--- a/.gitignore
+++ b/.gitignore
@@ -6,13 +6,14 @@ yarn-debug.log*
 yarn-error.log*
 pnpm-debug.log*
 lerna-debug.log*
+package-lock.json
 
 node_modules
 dist
 dist-ssr
 *.local
-.env
-package-lock.json
+.scannerwork
+
 
 # Editor directories and files
 .vscode/*
@@ -24,3 +25,4 @@ package-lock.json
 *.njsproj
 *.sln
 *.sw?
+.env
