--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,8 +13,9 @@
     "moduleResolution": "Node",
     "resolveJsonModule": true,
     "isolatedModules": true,
-    "noEmit": true,
-    "jsx": "react-jsx",
+    // "noEmit": true,
+    "jsx": "preserve",
+    "experimentalDecorators": true,
     "paths": {
       "@/*": ["./src/*"]
     }
